corrección de la estructura de "contacto.html"

--- a/Clase 4/tareaU4/estilos.css
+++ b/Clase 4/tareaU4/estilos.css
@@ -33,3 +33,8 @@ li{
 body{
     background-color: bisque;
 }
+label{
+    color: darkblue;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 20px;
+}
